tests/ui/const-generics/issues/issue-56445-2.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-56445-2.rs:7:38
   |
LL |     fn lfn_contents(&self) -> [char; Self::LFN_FRAGMENT_LEN] { loop { } }
   |                                      ^^^^
   |
note: not a concrete type
  --> $DIR/issue-56445-2.rs:4:10
   |
LL | impl<'a> OnDiskDirEntry<'a> {
   |          ^^^^^^^^^^^^^^^^^^
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

